# ircss

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  version.m4
src/: Makefile.am  Makefile.in  build_fuzzer.sh  core.h  icd.c  icd.h  irc.c  irc.h  ircssd.c  main.c  misc.c  misc.h  rawd.c  sock.c  sock.h  ss.c  ss.h
src/seeds/: nick  user
